--- a/shop.html
+++ b/shop.html
@@ -78,7 +78,7 @@
     </div>
 
     <!-- HERO / HEADER -->
-    <section class="pt-32 pb-16 px-6 text-center bg-brand-bone">
+    <section class="pt-32 pb-16 px-6 text-center bg-brand-bone" data-reveal>
         <h1 class="font-display font-bold text-5xl md:text-6xl text-brand-dark mb-4">Print Shop</h1>
         <p class="text-brand-dark/70 max-w-sm mx-auto">Limited edition fine art prints. Printed on museum-grade cotton
             rag paper.</p>
@@ -86,7 +86,7 @@
 
     <!-- PRODUCTS GRID -->
     <section class="px-6 md:px-12 pb-32 max-w-7xl mx-auto">
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 md:gap-8" id="products-grid">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 md:gap-8" id="products-grid" data-stagger>
             <!-- Products Rendered by JS -->
         </div>
     </section>
@@ -126,6 +126,7 @@
     <!-- SCRIPTS -->
     <script src="js/app.js"></script>
     <script src="js/shop.js"></script>
+    <script src="js/animations.js"></script>
 </body>
 
 </html>
