--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
         <div class="w-full max-w-4xl grid md:grid-cols-2 gap-16 md:gap-24">
 
             <!-- Info Side -->
-            <div class="flex flex-col justify-center space-y-12">
+            <div class="flex flex-col justify-center space-y-12" data-reveal>
                 <div>
                     <h2 class="font-display font-black text-4xl md:text-5xl text-brand-dark mb-6">Let's
                         Create<br /><span class="text-brand-gold">Something Timeless</span></h2>
@@ -114,7 +114,8 @@
             </div>
 
             <!-- Form Side -->
-            <div class="bg-white p-8 md:p-12 shadow-2xl shadow-brand-dark/5 rounded-[2rem] border border-brand-dark/5">
+            <div class="bg-white p-8 md:p-12 shadow-2xl shadow-brand-dark/5 rounded-[2rem] border border-brand-dark/5"
+                data-reveal>
                 <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" class="flex flex-col gap-8">
                     <div class="space-y-2">
                         <label for="name"
@@ -202,6 +203,7 @@
 
     <!-- SCRIPTS -->
     <script src="js/app.js"></script>
+    <script src="js/animations.js"></script>
     <script>
         document.querySelector('form').addEventListener('submit', function (e) {
             e.preventDefault();
