--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
 
     <!-- GALLERY SECTION -->
     <section id="work" class="py-20 px-6 md:px-12 w-full max-w-[1600px] mx-auto bg-brand-bone">
-        <div class="flex flex-col items-center text-center mb-12">
-            <h2 class="font-display font-bold text-4xl md:text-6xl text-brand-dark mb-4">Selected Works</h2>
+        <div class="flex flex-col items-center text-center mb-12" data-reveal>
+            <h2 class="font-display font-bold text-4xl md:text-6xl text-brand-dark mb-4" data-text-reveal>Selected Works
+            </h2>
             <p class="text-brand-dark/70 max-w-lg mb-8 font-light">A curated collection of moments captured across the
                 vibrant landscapes and soulful expressions of Kenya.</p>
             <div class="inline-flex flex-wrap justify-center gap-3 p-2 bg-white rounded-full shadow-sm border border-brand-dark/5"
@@ -157,7 +158,7 @@
             </div>
         </div>
 
-        <div class="masonry-grid pb-12" id="gallery-grid">
+        <div class="masonry-grid pb-12" id="gallery-grid" data-stagger>
             <!-- Gallery items rendered by JS -->
         </div>
 
@@ -171,8 +172,95 @@
         </div>
     </section>
 
+    <!-- TESTIMONIALS SECTION -->
+    <section id="testimonials" class="py-24 px-6 md:px-12 bg-brand-bone overflow-hidden">
+        <div class="max-w-6xl mx-auto">
+            <div class="text-center mb-16" data-reveal>
+                <span class="text-brand-gold text-xs font-bold tracking-[0.2em] uppercase">Client Love</span>
+                <h2 class="font-display font-bold text-4xl md:text-5xl text-brand-dark mt-4">What They Say</h2>
+            </div>
+            <div class="grid md:grid-cols-3 gap-8" data-stagger>
+                <div class="testimonial-card">
+                    <div class="flex items-center gap-1 mb-4">
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                    </div>
+                    <p class="text-brand-dark/80 font-light leading-relaxed mb-6">"The photos captured our wedding day
+                        in a way that still brings tears to my eyes. Every frame tells our story."</p>
+                    <div class="flex items-center gap-3">
+                        <div class="w-12 h-12 rounded-full bg-brand-dark/10 flex items-center justify-center">
+                            <span class="font-display font-bold text-brand-dark">AW</span>
+                        </div>
+                        <div>
+                            <p class="font-display font-bold text-brand-dark">Amina & Wilson</p>
+                            <p class="text-xs text-brand-dark/50">Wedding, 2025</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <div class="flex items-center gap-1 mb-4">
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                    </div>
+                    <p class="text-brand-dark/80 font-light leading-relaxed mb-6">"Working with OYANGE transformed our
+                        brand visuals. The attention to detail and creative direction exceeded expectations."</p>
+                    <div class="flex items-center gap-3">
+                        <div class="w-12 h-12 rounded-full bg-brand-dark/10 flex items-center justify-center">
+                            <span class="font-display font-bold text-brand-dark">SK</span>
+                        </div>
+                        <div>
+                            <p class="font-display font-bold text-brand-dark">Safari Kombucha</p>
+                            <p class="text-xs text-brand-dark/50">Brand Campaign</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <div class="flex items-center gap-1 mb-4">
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                        <span class="material-symbols-outlined text-brand-gold text-lg">star</span>
+                    </div>
+                    <p class="text-brand-dark/80 font-light leading-relaxed mb-6">"Finally found a photographer who
+                        understands African aesthetics. The prints now hang in my living room."</p>
+                    <div class="flex items-center gap-3">
+                        <div class="w-12 h-12 rounded-full bg-brand-dark/10 flex items-center justify-center">
+                            <span class="font-display font-bold text-brand-dark">TM</span>
+                        </div>
+                        <div>
+                            <p class="font-display font-bold text-brand-dark">Thandiwe M.</p>
+                            <p class="text-xs text-brand-dark/50">Print Collector</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FLOATING CTA -->
+    <a href="contact.html" id="floating-cta" class="floating-cta" data-magnetic="0.2">
+        <span class="material-symbols-outlined text-lg">calendar_month</span>
+        Book Now
+    </a>
+
+    <!-- WHATSAPP CTA -->
+    <a href="https://wa.me/254700000000" target="_blank" rel="noopener noreferrer" id="whatsapp-cta"
+        class="whatsapp-cta" aria-label="Chat on WhatsApp">
+        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" viewBox="0 0 16 16">
+            <path
+                d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
+        </svg>
+    </a>
+
     <!-- FOOTER -->
-    <footer class="w-full px-2 sm:px-4 pb-4 bg-brand-bone">
+    <footer class="w-full px-2 sm:px-4 pb-4 bg-brand-bone" data-reveal>
         <div
             class="relative w-full overflow-hidden bg-brand-dark rounded-t-[2.5rem] md:rounded-t-[3.5rem] px-8 pt-16 pb-8 md:px-16 md:pt-24 md:pb-12 text-white">
             <div class="noise-overlay"></div>
@@ -206,6 +294,27 @@
     <!-- SCRIPTS -->
     <script src="js/app.js"></script>
     <script src="js/gallery.js"></script>
+    <script src="js/animations.js"></script>
+    <script>
+        // Initialize floating CTAs visibility on scroll
+        document.addEventListener('DOMContentLoaded', function () {
+            const floatingCTA = document.getElementById('floating-cta');
+            const whatsappCTA = document.getElementById('whatsapp-cta');
+            let lastScroll = 0;
+
+            window.addEventListener('scroll', function () {
+                const currentScroll = window.scrollY;
+                if (currentScroll > 400) {
+                    floatingCTA?.classList.add('visible');
+                    whatsappCTA?.classList.add('visible');
+                } else {
+                    floatingCTA?.classList.remove('visible');
+                    whatsappCTA?.classList.remove('visible');
+                }
+                lastScroll = currentScroll;
+            }, { passive: true });
+        });
+    </script>
 </body>
 
 </html>
